# local-llm-orchestrator

./: .dockerignore  .env.docker.example  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.cuda.yaml  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: models.ini  models.json
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DOCKER.md  GITHUB.md  OPERATIONS.md  REPOSITORY.md  SKILL_AGENTS.md
scripts/: common.ps1  docker-down.ps1  docker-logs.ps1  docker-status.ps1  docker-up.ps1  docker-validate.ps1  health.ps1  start.ps1  status.ps1  stop.ps1  validate.ps1
services/orchestrator/: __init__.py  config.py  llama_client.py  main.py  mcp_client.py  prompt_service.py  registry.py  router.py  schemas.py  service.py
tests/: test_api.py  test_registry_router.py  test_service.py
