[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-orchestrator"
version = "1.0.0"
description = "OpenAI-compatible orchestration layer for llama.cpp and MCP tools"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "httpx>=0.27.0,<1.0",
  "mcp>=1.0.0,<2.0",
  "pydantic>=2.8.0,<3.0",
  "python-dotenv>=1.0.0,<2.0",
  "uvicorn[standard]>=0.30.0,<1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0,<9.0", "pytest-asyncio>=0.23.0,<1.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["services*"]
